# KJ_Windows

./: CMakeLists.txt  LICENSE  README.md  audio_engine.cpp  gui_main.cpp  main.cpp
docs/: roadmap.md  vst3_enqueue_failures.md  vst3_hosting_editor_flow.md  vst3_integration_notes.md
include/core/: audio_device_handler.h  audio_engine.h  audio_thread_pool.h  gui_main.h  midi_output.h  midi_ports.h  mod_matrix.h  mod_matrix_parameters.h  once_flag.h  project_io.h  sample_loader.h  sequencer.h  track_type_midi.h  track_type_sample.h  track_type_synth.h  track_type_vst.h  tracks.h
include/core/effects/: delay_effect.h  dll_effect_host.h  effect_plugin.h  sidechain_processor.h
include/gui/: compressor_window.h  gui_main.h  gui_refresh.h  lfo_window.h  menu_commands.h  mod_matrix_window.h  waveform_window.h
include/hosting/: VST3AsyncLoader.h  VST3Host.h  VST3PlugFrame.h  VSTEditorWindow.h  VSTGuiThread.h  VstParameterQueue.h
src/: main.cpp
src/audio/: thread_pool.cpp  thread_pool.h
src/core/: CMakeLists.txt  audio_device_handler.cpp  audio_engine.cpp  audio_engine_devices.inl  audio_engine_waveform.inl  audio_thread_pool.cpp  delay_effect.cpp  dll_effect_host.cpp  midi_output.cpp  midi_ports.cpp  mod_matrix.cpp  mod_matrix_parameters.cpp  project_io.cpp  sample_loader.cpp  sequencer.cpp  sidechain_processor.cpp  track_type_midi.cpp  track_type_sample.cpp  track_type_sample_legacy_unused.cpp  track_type_synth.cpp  track_type_synth_legacy_unused.cpp  track_type_vst.cpp  tracks.cpp  tracks_internal.h  tracks_midi.inl
src/core/vst/: CMakeLists.txt  delay_effect.cpp
src/gui/: CMakeLists.txt  compressor_window.cpp  effects_window.cpp  gui_main.cpp  gui_refresh.cpp  lfo_window.cpp  mod_matrix_window.cpp  waveform_window.cpp
src/hosting/: VST3AsyncLoader.cpp  VST3Host.cpp  VST3PlugFrame.cpp  VSTEditorWindow.cpp  VSTGuiThread.cpp  VstParameterQueue.cpp
src/hosting/tests/: VSTGuiThreadTests.cpp
