add_library(kj_core audio_engine.cpp project_io.cpp sample_loader.cpp sequencer.cpp tracks.cpp)
target_sources(kj_core PRIVATE audio_device_handler.cpp)
target_include_directories(kj_core PRIVATE ../../include)
target_link_libraries(kj_core PRIVATE ole32 uuid winmm dsound)
target_compile_definitions(kj_core PRIVATE $<$<CONFIG:Debug>:DEBUG_AUDIO>)
